New branch to develop the 6.0.6 version. I hope we can share some work easily with the 6.1. Maybe with cherry pick.