@@ -15,7 +15,7 @@
 package com.liferay.shopping.service.persistence;
 
 import com.liferay.portal.NoSuchModelException;
-import com.liferay.portal.kernel.bean.BeanReference;
+import com.liferay.portal.kernel.annotation.BeanReference;
 import com.liferay.portal.kernel.cache.CacheRegistryUtil;
 import com.liferay.portal.kernel.dao.orm.EntityCacheUtil;
 import com.liferay.portal.kernel.dao.orm.FinderCacheUtil;
@@ -30,13 +30,10 @@ import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.InstanceFactory;
 import com.liferay.portal.kernel.util.OrderByComparator;
-import com.liferay.portal.kernel.util.PropsKeys;
-import com.liferay.portal.kernel.util.PropsUtil;
 import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.model.CacheModel;
 import com.liferay.portal.model.ModelListener;
 import com.liferay.portal.service.persistence.BatchSessionUtil;
 import com.liferay.portal.service.persistence.ResourcePersistence;
@@ -58,6 +55,10 @@ import java.util.List;
  * The persistence implementation for the shopping coupon service.
  *
  * <p>
+ * Never modify or reference this class directly. Always use {@link ShoppingCouponUtil} to access the shopping coupon persistence. Modify <code>service.xml</code> and rerun ServiceBuilder to regenerate this class.
+ * </p>
+ *
+ * <p>
  * Caching information and settings can be found in <code>portal.properties</code>
  * </p>
  *
@@ -68,17 +69,12 @@ import java.util.List;
  */
 public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingCoupon>
 	implements ShoppingCouponPersistence {
-	/*
-	 * NOTE FOR DEVELOPERS:
-	 *
-	 * Never modify or reference this class directly. Always use {@link ShoppingCouponUtil} to access the shopping coupon persistence. Modify <code>service.xml</code> and rerun ServiceBuilder to regenerate this class.
-	 */
 	public static final String FINDER_CLASS_NAME_ENTITY = ShoppingCouponImpl.class.getName();
 	public static final String FINDER_CLASS_NAME_LIST = FINDER_CLASS_NAME_ENTITY +
 		".List";
 	public static final FinderPath FINDER_PATH_FIND_BY_GROUPID = new FinderPath(ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
 			ShoppingCouponModelImpl.FINDER_CACHE_ENABLED,
-			ShoppingCouponImpl.class, FINDER_CLASS_NAME_LIST, "findByGroupId",
+			FINDER_CLASS_NAME_LIST, "findByGroupId",
 			new String[] {
 				Long.class.getName(),
 				
@@ -86,29 +82,28 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 				"com.liferay.portal.kernel.util.OrderByComparator"
 			});
 	public static final FinderPath FINDER_PATH_COUNT_BY_GROUPID = new FinderPath(ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
-			ShoppingCouponModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			ShoppingCouponModelImpl.FINDER_CACHE_ENABLED,
 			FINDER_CLASS_NAME_LIST, "countByGroupId",
 			new String[] { Long.class.getName() });
 	public static final FinderPath FINDER_PATH_FETCH_BY_CODE = new FinderPath(ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
 			ShoppingCouponModelImpl.FINDER_CACHE_ENABLED,
-			ShoppingCouponImpl.class, FINDER_CLASS_NAME_ENTITY, "fetchByCode",
+			FINDER_CLASS_NAME_ENTITY, "fetchByCode",
 			new String[] { String.class.getName() });
 	public static final FinderPath FINDER_PATH_COUNT_BY_CODE = new FinderPath(ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
-			ShoppingCouponModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			ShoppingCouponModelImpl.FINDER_CACHE_ENABLED,
 			FINDER_CLASS_NAME_LIST, "countByCode",
 			new String[] { String.class.getName() });
 	public static final FinderPath FINDER_PATH_FIND_ALL = new FinderPath(ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
 			ShoppingCouponModelImpl.FINDER_CACHE_ENABLED,
-			ShoppingCouponImpl.class, FINDER_CLASS_NAME_LIST, "findAll",
-			new String[0]);
+			FINDER_CLASS_NAME_LIST, "findAll", new String[0]);
 	public static final FinderPath FINDER_PATH_COUNT_ALL = new FinderPath(ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
-			ShoppingCouponModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			ShoppingCouponModelImpl.FINDER_CACHE_ENABLED,
 			FINDER_CLASS_NAME_LIST, "countAll", new String[0]);
 
 	/**
 	 * Caches the shopping coupon in the entity cache if it is enabled.
 	 *
-	 * @param shoppingCoupon the shopping coupon
+	 * @param shoppingCoupon the shopping coupon to cache
 	 */
 	public void cacheResult(ShoppingCoupon shoppingCoupon) {
 		EntityCacheUtil.putResult(ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
@@ -117,20 +112,19 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 
 		FinderCacheUtil.putResult(FINDER_PATH_FETCH_BY_CODE,
 			new Object[] { shoppingCoupon.getCode() }, shoppingCoupon);
-
-		shoppingCoupon.resetOriginalValues();
 	}
 
 	/**
 	 * Caches the shopping coupons in the entity cache if it is enabled.
 	 *
-	 * @param shoppingCoupons the shopping coupons
+	 * @param shoppingCoupons the shopping coupons to cache
 	 */
 	public void cacheResult(List<ShoppingCoupon> shoppingCoupons) {
 		for (ShoppingCoupon shoppingCoupon : shoppingCoupons) {
 			if (EntityCacheUtil.getResult(
 						ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
-						ShoppingCouponImpl.class, shoppingCoupon.getPrimaryKey()) == null) {
+						ShoppingCouponImpl.class,
+						shoppingCoupon.getPrimaryKey(), this) == null) {
 				cacheResult(shoppingCoupon);
 			}
 		}
@@ -143,12 +137,8 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	 * The {@link com.liferay.portal.kernel.dao.orm.EntityCache} and {@link com.liferay.portal.kernel.dao.orm.FinderCache} are both cleared by this method.
 	 * </p>
 	 */
-	@Override
 	public void clearCache() {
-		if (_HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE) {
-			CacheRegistryUtil.clear(ShoppingCouponImpl.class.getName());
-		}
-
+		CacheRegistryUtil.clear(ShoppingCouponImpl.class.getName());
 		EntityCacheUtil.clearCache(ShoppingCouponImpl.class.getName());
 		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_ENTITY);
 		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST);
@@ -161,12 +151,9 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	 * The {@link com.liferay.portal.kernel.dao.orm.EntityCache} and {@link com.liferay.portal.kernel.dao.orm.FinderCache} are both cleared by this method.
 	 * </p>
 	 */
-	@Override
 	public void clearCache(ShoppingCoupon shoppingCoupon) {
 		EntityCacheUtil.removeResult(ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
 			ShoppingCouponImpl.class, shoppingCoupon.getPrimaryKey());
-
-		FinderCacheUtil.removeResult(FINDER_PATH_FIND_ALL, FINDER_ARGS_EMPTY);
 
 		FinderCacheUtil.removeResult(FINDER_PATH_FETCH_BY_CODE,
 			new Object[] { shoppingCoupon.getCode() });
@@ -190,12 +177,11 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	/**
 	 * Removes the shopping coupon with the primary key from the database. Also notifies the appropriate model listeners.
 	 *
-	 * @param primaryKey the primary key of the shopping coupon
+	 * @param primaryKey the primary key of the shopping coupon to remove
 	 * @return the shopping coupon that was removed
 	 * @throws com.liferay.portal.NoSuchModelException if a shopping coupon with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
-	@Override
 	public ShoppingCoupon remove(Serializable primaryKey)
 		throws NoSuchModelException, SystemException {
 		return remove(((Long)primaryKey).longValue());
@@ -204,7 +190,7 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	/**
 	 * Removes the shopping coupon with the primary key from the database. Also notifies the appropriate model listeners.
 	 *
-	 * @param couponId the primary key of the shopping coupon
+	 * @param couponId the primary key of the shopping coupon to remove
 	 * @return the shopping coupon that was removed
 	 * @throws com.liferay.shopping.NoSuchCouponException if a shopping coupon with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -217,7 +203,7 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 			session = openSession();
 
 			ShoppingCoupon shoppingCoupon = (ShoppingCoupon)session.get(ShoppingCouponImpl.class,
-					Long.valueOf(couponId));
+					new Long(couponId));
 
 			if (shoppingCoupon == null) {
 				if (_log.isWarnEnabled()) {
@@ -228,7 +214,7 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 					couponId);
 			}
 
-			return shoppingCouponPersistence.remove(shoppingCoupon);
+			return remove(shoppingCoupon);
 		}
 		catch (NoSuchCouponException nsee) {
 			throw nsee;
@@ -241,20 +227,6 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 		}
 	}
 
-	/**
-	 * Removes the shopping coupon from the database. Also notifies the appropriate model listeners.
-	 *
-	 * @param shoppingCoupon the shopping coupon
-	 * @return the shopping coupon that was removed
-	 * @throws SystemException if a system exception occurred
-	 */
-	@Override
-	public ShoppingCoupon remove(ShoppingCoupon shoppingCoupon)
-		throws SystemException {
-		return super.remove(shoppingCoupon);
-	}
-
-	@Override
 	protected ShoppingCoupon removeImpl(ShoppingCoupon shoppingCoupon)
 		throws SystemException {
 		shoppingCoupon = toUnwrappedModel(shoppingCoupon);
@@ -286,7 +258,6 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 		return shoppingCoupon;
 	}
 
-	@Override
 	public ShoppingCoupon updateImpl(
 		com.liferay.shopping.model.ShoppingCoupon shoppingCoupon, boolean merge)
 		throws SystemException {
@@ -368,23 +339,22 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns the shopping coupon with the primary key or throws a {@link com.liferay.portal.NoSuchModelException} if it could not be found.
+	 * Finds the shopping coupon with the primary key or throws a {@link com.liferay.portal.NoSuchModelException} if it could not be found.
 	 *
-	 * @param primaryKey the primary key of the shopping coupon
+	 * @param primaryKey the primary key of the shopping coupon to find
 	 * @return the shopping coupon
 	 * @throws com.liferay.portal.NoSuchModelException if a shopping coupon with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
-	@Override
 	public ShoppingCoupon findByPrimaryKey(Serializable primaryKey)
 		throws NoSuchModelException, SystemException {
 		return findByPrimaryKey(((Long)primaryKey).longValue());
 	}
 
 	/**
-	 * Returns the shopping coupon with the primary key or throws a {@link com.liferay.shopping.NoSuchCouponException} if it could not be found.
+	 * Finds the shopping coupon with the primary key or throws a {@link com.liferay.shopping.NoSuchCouponException} if it could not be found.
 	 *
-	 * @param couponId the primary key of the shopping coupon
+	 * @param couponId the primary key of the shopping coupon to find
 	 * @return the shopping coupon
 	 * @throws com.liferay.shopping.NoSuchCouponException if a shopping coupon with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -406,57 +376,44 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns the shopping coupon with the primary key or returns <code>null</code> if it could not be found.
+	 * Finds the shopping coupon with the primary key or returns <code>null</code> if it could not be found.
 	 *
-	 * @param primaryKey the primary key of the shopping coupon
+	 * @param primaryKey the primary key of the shopping coupon to find
 	 * @return the shopping coupon, or <code>null</code> if a shopping coupon with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
-	@Override
 	public ShoppingCoupon fetchByPrimaryKey(Serializable primaryKey)
 		throws SystemException {
 		return fetchByPrimaryKey(((Long)primaryKey).longValue());
 	}
 
 	/**
-	 * Returns the shopping coupon with the primary key or returns <code>null</code> if it could not be found.
+	 * Finds the shopping coupon with the primary key or returns <code>null</code> if it could not be found.
 	 *
-	 * @param couponId the primary key of the shopping coupon
+	 * @param couponId the primary key of the shopping coupon to find
 	 * @return the shopping coupon, or <code>null</code> if a shopping coupon with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
 	public ShoppingCoupon fetchByPrimaryKey(long couponId)
 		throws SystemException {
 		ShoppingCoupon shoppingCoupon = (ShoppingCoupon)EntityCacheUtil.getResult(ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
-				ShoppingCouponImpl.class, couponId);
-
-		if (shoppingCoupon == _nullShoppingCoupon) {
-			return null;
-		}
+				ShoppingCouponImpl.class, couponId, this);
 
 		if (shoppingCoupon == null) {
 			Session session = null;
-
-			boolean hasException = false;
 
 			try {
 				session = openSession();
 
 				shoppingCoupon = (ShoppingCoupon)session.get(ShoppingCouponImpl.class,
-						Long.valueOf(couponId));
+						new Long(couponId));
 			}
 			catch (Exception e) {
-				hasException = true;
-
 				throw processException(e);
 			}
 			finally {
 				if (shoppingCoupon != null) {
 					cacheResult(shoppingCoupon);
-				}
-				else if (!hasException) {
-					EntityCacheUtil.putResult(ShoppingCouponModelImpl.ENTITY_CACHE_ENABLED,
-						ShoppingCouponImpl.class, couponId, _nullShoppingCoupon);
 				}
 
 				closeSession(session);
@@ -467,9 +424,9 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns all the shopping coupons where groupId = &#63;.
+	 * Finds all the shopping coupons where groupId = &#63;.
 	 *
-	 * @param groupId the group ID
+	 * @param groupId the group id to search with
 	 * @return the matching shopping coupons
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -479,15 +436,15 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns a range of all the shopping coupons where groupId = &#63;.
+	 * Finds a range of all the shopping coupons where groupId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param start the lower bound of the range of shopping coupons
-	 * @param end the upper bound of the range of shopping coupons (not inclusive)
+	 * @param groupId the group id to search with
+	 * @param start the lower bound of the range of shopping coupons to return
+	 * @param end the upper bound of the range of shopping coupons to return (not inclusive)
 	 * @return the range of matching shopping coupons
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -497,16 +454,16 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns an ordered range of all the shopping coupons where groupId = &#63;.
+	 * Finds an ordered range of all the shopping coupons where groupId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param start the lower bound of the range of shopping coupons
-	 * @param end the upper bound of the range of shopping coupons (not inclusive)
-	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param start the lower bound of the range of shopping coupons to return
+	 * @param end the upper bound of the range of shopping coupons to return (not inclusive)
+	 * @param orderByComparator the comparator to order the results by
 	 * @return the ordered range of matching shopping coupons
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -515,7 +472,8 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 		Object[] finderArgs = new Object[] {
 				groupId,
 				
-				start, end, orderByComparator
+				String.valueOf(start), String.valueOf(end),
+				String.valueOf(orderByComparator)
 			};
 
 		List<ShoppingCoupon> list = (List<ShoppingCoupon>)FinderCacheUtil.getResult(FINDER_PATH_FIND_BY_GROUPID,
@@ -584,14 +542,14 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns the first shopping coupon in the ordered set where groupId = &#63;.
+	 * Finds the first shopping coupon in the ordered set where groupId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param orderByComparator the comparator to order the set by
 	 * @return the first matching shopping coupon
 	 * @throws com.liferay.shopping.NoSuchCouponException if a matching shopping coupon could not be found
 	 * @throws SystemException if a system exception occurred
@@ -620,14 +578,14 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns the last shopping coupon in the ordered set where groupId = &#63;.
+	 * Finds the last shopping coupon in the ordered set where groupId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param orderByComparator the comparator to order the set by
 	 * @return the last matching shopping coupon
 	 * @throws com.liferay.shopping.NoSuchCouponException if a matching shopping coupon could not be found
 	 * @throws SystemException if a system exception occurred
@@ -658,15 +616,15 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns the shopping coupons before and after the current shopping coupon in the ordered set where groupId = &#63;.
+	 * Finds the shopping coupons before and after the current shopping coupon in the ordered set where groupId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
 	 * @param couponId the primary key of the current shopping coupon
-	 * @param groupId the group ID
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param orderByComparator the comparator to order the set by
 	 * @return the previous, current, and next shopping coupon
 	 * @throws com.liferay.shopping.NoSuchCouponException if a shopping coupon with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -719,17 +677,17 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 		query.append(_FINDER_COLUMN_GROUPID_GROUPID_2);
 
 		if (orderByComparator != null) {
-			String[] orderByConditionFields = orderByComparator.getOrderByConditionFields();
+			String[] orderByFields = orderByComparator.getOrderByFields();
 
-			if (orderByConditionFields.length > 0) {
+			if (orderByFields.length > 0) {
 				query.append(WHERE_AND);
 			}
 
-			for (int i = 0; i < orderByConditionFields.length; i++) {
+			for (int i = 0; i < orderByFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
-				query.append(orderByConditionFields[i]);
+				query.append(orderByFields[i]);
 
-				if ((i + 1) < orderByConditionFields.length) {
+				if ((i + 1) < orderByFields.length) {
 					if (orderByComparator.isAscending() ^ previous) {
 						query.append(WHERE_GREATER_THAN_HAS_NEXT);
 					}
@@ -748,8 +706,6 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 			}
 
 			query.append(ORDER_BY_CLAUSE);
-
-			String[] orderByFields = orderByComparator.getOrderByFields();
 
 			for (int i = 0; i < orderByFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
@@ -790,7 +746,7 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 		qPos.add(groupId);
 
 		if (orderByComparator != null) {
-			Object[] values = orderByComparator.getOrderByConditionValues(shoppingCoupon);
+			Object[] values = orderByComparator.getOrderByValues(shoppingCoupon);
 
 			for (Object value : values) {
 				qPos.add(value);
@@ -808,9 +764,9 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns the shopping coupon where code = &#63; or throws a {@link com.liferay.shopping.NoSuchCouponException} if it could not be found.
+	 * Finds the shopping coupon where code = &#63; or throws a {@link com.liferay.shopping.NoSuchCouponException} if it could not be found.
 	 *
-	 * @param code the code
+	 * @param code the code to search with
 	 * @return the matching shopping coupon
 	 * @throws com.liferay.shopping.NoSuchCouponException if a matching shopping coupon could not be found
 	 * @throws SystemException if a system exception occurred
@@ -840,9 +796,9 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns the shopping coupon where code = &#63; or returns <code>null</code> if it could not be found. Uses the finder cache.
+	 * Finds the shopping coupon where code = &#63; or returns <code>null</code> if it could not be found. Uses the finder cache.
 	 *
-	 * @param code the code
+	 * @param code the code to search with
 	 * @return the matching shopping coupon, or <code>null</code> if a matching shopping coupon could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -851,10 +807,9 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns the shopping coupon where code = &#63; or returns <code>null</code> if it could not be found, optionally using the finder cache.
+	 * Finds the shopping coupon where code = &#63; or returns <code>null</code> if it could not be found, optionally using the finder cache.
 	 *
-	 * @param code the code
-	 * @param retrieveFromCache whether to use the finder cache
+	 * @param code the code to search with
 	 * @return the matching shopping coupon, or <code>null</code> if a matching shopping coupon could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -950,7 +905,7 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns all the shopping coupons.
+	 * Finds all the shopping coupons.
 	 *
 	 * @return the shopping coupons
 	 * @throws SystemException if a system exception occurred
@@ -960,14 +915,14 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns a range of all the shopping coupons.
+	 * Finds a range of all the shopping coupons.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param start the lower bound of the range of shopping coupons
-	 * @param end the upper bound of the range of shopping coupons (not inclusive)
+	 * @param start the lower bound of the range of shopping coupons to return
+	 * @param end the upper bound of the range of shopping coupons to return (not inclusive)
 	 * @return the range of shopping coupons
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -977,21 +932,24 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns an ordered range of all the shopping coupons.
+	 * Finds an ordered range of all the shopping coupons.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param start the lower bound of the range of shopping coupons
-	 * @param end the upper bound of the range of shopping coupons (not inclusive)
-	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
+	 * @param start the lower bound of the range of shopping coupons to return
+	 * @param end the upper bound of the range of shopping coupons to return (not inclusive)
+	 * @param orderByComparator the comparator to order the results by
 	 * @return the ordered range of shopping coupons
 	 * @throws SystemException if a system exception occurred
 	 */
 	public List<ShoppingCoupon> findAll(int start, int end,
 		OrderByComparator orderByComparator) throws SystemException {
-		Object[] finderArgs = new Object[] { start, end, orderByComparator };
+		Object[] finderArgs = new Object[] {
+				String.valueOf(start), String.valueOf(end),
+				String.valueOf(orderByComparator)
+			};
 
 		List<ShoppingCoupon> list = (List<ShoppingCoupon>)FinderCacheUtil.getResult(FINDER_PATH_FIND_ALL,
 				finderArgs, this);
@@ -1058,26 +1016,26 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	/**
 	 * Removes all the shopping coupons where groupId = &#63; from the database.
 	 *
-	 * @param groupId the group ID
+	 * @param groupId the group id to search with
 	 * @throws SystemException if a system exception occurred
 	 */
 	public void removeByGroupId(long groupId) throws SystemException {
 		for (ShoppingCoupon shoppingCoupon : findByGroupId(groupId)) {
-			shoppingCouponPersistence.remove(shoppingCoupon);
+			remove(shoppingCoupon);
 		}
 	}
 
 	/**
 	 * Removes the shopping coupon where code = &#63; from the database.
 	 *
-	 * @param code the code
+	 * @param code the code to search with
 	 * @throws SystemException if a system exception occurred
 	 */
 	public void removeByCode(String code)
 		throws NoSuchCouponException, SystemException {
 		ShoppingCoupon shoppingCoupon = findByCode(code);
 
-		shoppingCouponPersistence.remove(shoppingCoupon);
+		remove(shoppingCoupon);
 	}
 
 	/**
@@ -1087,14 +1045,14 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	 */
 	public void removeAll() throws SystemException {
 		for (ShoppingCoupon shoppingCoupon : findAll()) {
-			shoppingCouponPersistence.remove(shoppingCoupon);
+			remove(shoppingCoupon);
 		}
 	}
 
 	/**
-	 * Returns the number of shopping coupons where groupId = &#63;.
+	 * Counts all the shopping coupons where groupId = &#63;.
 	 *
-	 * @param groupId the group ID
+	 * @param groupId the group id to search with
 	 * @return the number of matching shopping coupons
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1145,9 +1103,9 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns the number of shopping coupons where code = &#63;.
+	 * Counts all the shopping coupons where code = &#63;.
 	 *
-	 * @param code the code
+	 * @param code the code to search with
 	 * @return the number of matching shopping coupons
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1210,14 +1168,16 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	}
 
 	/**
-	 * Returns the number of shopping coupons.
+	 * Counts all the shopping coupons.
 	 *
 	 * @return the number of shopping coupons
 	 * @throws SystemException if a system exception occurred
 	 */
 	public int countAll() throws SystemException {
+		Object[] finderArgs = new Object[0];
+
 		Long count = (Long)FinderCacheUtil.getResult(FINDER_PATH_COUNT_ALL,
-				FINDER_ARGS_EMPTY, this);
+				finderArgs, this);
 
 		if (count == null) {
 			Session session = null;
@@ -1237,8 +1197,8 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 					count = Long.valueOf(0);
 				}
 
-				FinderCacheUtil.putResult(FINDER_PATH_COUNT_ALL,
-					FINDER_ARGS_EMPTY, count);
+				FinderCacheUtil.putResult(FINDER_PATH_COUNT_ALL, finderArgs,
+					count);
 
 				closeSession(session);
 			}
@@ -1309,24 +1269,5 @@ public class ShoppingCouponPersistenceImpl extends BasePersistenceImpl<ShoppingC
 	private static final String _ORDER_BY_ENTITY_ALIAS = "shoppingCoupon.";
 	private static final String _NO_SUCH_ENTITY_WITH_PRIMARY_KEY = "No ShoppingCoupon exists with the primary key ";
 	private static final String _NO_SUCH_ENTITY_WITH_KEY = "No ShoppingCoupon exists with the key {";
-	private static final boolean _HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE = GetterUtil.getBoolean(PropsUtil.get(
-				PropsKeys.HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE));
 	private static Log _log = LogFactoryUtil.getLog(ShoppingCouponPersistenceImpl.class);
-	private static ShoppingCoupon _nullShoppingCoupon = new ShoppingCouponImpl() {
-			@Override
-			public Object clone() {
-				return this;
-			}
-
-			@Override
-			public CacheModel<ShoppingCoupon> toCacheModel() {
-				return _nullShoppingCouponCacheModel;
-			}
-		};
-
-	private static CacheModel<ShoppingCoupon> _nullShoppingCouponCacheModel = new CacheModel<ShoppingCoupon>() {
-			public ShoppingCoupon toEntityModel() {
-				return _nullShoppingCoupon;
-			}
-		};
 }
