@@ -15,7 +15,7 @@
 package com.liferay.shopping.service.persistence;
 
 import com.liferay.portal.NoSuchModelException;
-import com.liferay.portal.kernel.bean.BeanReference;
+import com.liferay.portal.kernel.annotation.BeanReference;
 import com.liferay.portal.kernel.cache.CacheRegistryUtil;
 import com.liferay.portal.kernel.dao.orm.EntityCacheUtil;
 import com.liferay.portal.kernel.dao.orm.FinderCacheUtil;
@@ -23,7 +23,6 @@ import com.liferay.portal.kernel.dao.orm.FinderPath;
 import com.liferay.portal.kernel.dao.orm.Query;
 import com.liferay.portal.kernel.dao.orm.QueryPos;
 import com.liferay.portal.kernel.dao.orm.QueryUtil;
-import com.liferay.portal.kernel.dao.orm.SQLQuery;
 import com.liferay.portal.kernel.dao.orm.Session;
 import com.liferay.portal.kernel.exception.SystemException;
 import com.liferay.portal.kernel.log.Log;
@@ -31,15 +30,11 @@ import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.InstanceFactory;
 import com.liferay.portal.kernel.util.OrderByComparator;
-import com.liferay.portal.kernel.util.PropsKeys;
-import com.liferay.portal.kernel.util.PropsUtil;
 import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.model.CacheModel;
 import com.liferay.portal.model.ModelListener;
-import com.liferay.portal.security.permission.InlineSQLHelperUtil;
 import com.liferay.portal.service.persistence.BatchSessionUtil;
 import com.liferay.portal.service.persistence.CompanyPersistence;
 import com.liferay.portal.service.persistence.ResourcePersistence;
@@ -63,6 +58,10 @@ import java.util.List;
  * The persistence implementation for the shopping order service.
  *
  * <p>
+ * Never modify or reference this class directly. Always use {@link ShoppingOrderUtil} to access the shopping order persistence. Modify <code>service.xml</code> and rerun ServiceBuilder to regenerate this class.
+ * </p>
+ *
+ * <p>
  * Caching information and settings can be found in <code>portal.properties</code>
  * </p>
  *
@@ -73,17 +72,12 @@ import java.util.List;
  */
 public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOrder>
 	implements ShoppingOrderPersistence {
-	/*
-	 * NOTE FOR DEVELOPERS:
-	 *
-	 * Never modify or reference this class directly. Always use {@link ShoppingOrderUtil} to access the shopping order persistence. Modify <code>service.xml</code> and rerun ServiceBuilder to regenerate this class.
-	 */
 	public static final String FINDER_CLASS_NAME_ENTITY = ShoppingOrderImpl.class.getName();
 	public static final String FINDER_CLASS_NAME_LIST = FINDER_CLASS_NAME_ENTITY +
 		".List";
 	public static final FinderPath FINDER_PATH_FIND_BY_GROUPID = new FinderPath(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
 			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED,
-			ShoppingOrderImpl.class, FINDER_CLASS_NAME_LIST, "findByGroupId",
+			FINDER_CLASS_NAME_LIST, "findByGroupId",
 			new String[] {
 				Long.class.getName(),
 				
@@ -91,28 +85,28 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 				"com.liferay.portal.kernel.util.OrderByComparator"
 			});
 	public static final FinderPath FINDER_PATH_COUNT_BY_GROUPID = new FinderPath(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
-			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED,
 			FINDER_CLASS_NAME_LIST, "countByGroupId",
 			new String[] { Long.class.getName() });
 	public static final FinderPath FINDER_PATH_FETCH_BY_NUMBER = new FinderPath(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
 			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED,
-			ShoppingOrderImpl.class, FINDER_CLASS_NAME_ENTITY, "fetchByNumber",
+			FINDER_CLASS_NAME_ENTITY, "fetchByNumber",
 			new String[] { String.class.getName() });
 	public static final FinderPath FINDER_PATH_COUNT_BY_NUMBER = new FinderPath(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
-			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED,
 			FINDER_CLASS_NAME_LIST, "countByNumber",
 			new String[] { String.class.getName() });
 	public static final FinderPath FINDER_PATH_FETCH_BY_PPTXNID = new FinderPath(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
 			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED,
-			ShoppingOrderImpl.class, FINDER_CLASS_NAME_ENTITY,
-			"fetchByPPTxnId", new String[] { String.class.getName() });
+			FINDER_CLASS_NAME_ENTITY, "fetchByPPTxnId",
+			new String[] { String.class.getName() });
 	public static final FinderPath FINDER_PATH_COUNT_BY_PPTXNID = new FinderPath(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
-			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED,
 			FINDER_CLASS_NAME_LIST, "countByPPTxnId",
 			new String[] { String.class.getName() });
 	public static final FinderPath FINDER_PATH_FIND_BY_G_U_PPPS = new FinderPath(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
 			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED,
-			ShoppingOrderImpl.class, FINDER_CLASS_NAME_LIST, "findByG_U_PPPS",
+			FINDER_CLASS_NAME_LIST, "findByG_U_PPPS",
 			new String[] {
 				Long.class.getName(), Long.class.getName(),
 				String.class.getName(),
@@ -121,7 +115,7 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 				"com.liferay.portal.kernel.util.OrderByComparator"
 			});
 	public static final FinderPath FINDER_PATH_COUNT_BY_G_U_PPPS = new FinderPath(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
-			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED,
 			FINDER_CLASS_NAME_LIST, "countByG_U_PPPS",
 			new String[] {
 				Long.class.getName(), Long.class.getName(),
@@ -129,16 +123,15 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 			});
 	public static final FinderPath FINDER_PATH_FIND_ALL = new FinderPath(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
 			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED,
-			ShoppingOrderImpl.class, FINDER_CLASS_NAME_LIST, "findAll",
-			new String[0]);
+			FINDER_CLASS_NAME_LIST, "findAll", new String[0]);
 	public static final FinderPath FINDER_PATH_COUNT_ALL = new FinderPath(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
-			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			ShoppingOrderModelImpl.FINDER_CACHE_ENABLED,
 			FINDER_CLASS_NAME_LIST, "countAll", new String[0]);
 
 	/**
 	 * Caches the shopping order in the entity cache if it is enabled.
 	 *
-	 * @param shoppingOrder the shopping order
+	 * @param shoppingOrder the shopping order to cache
 	 */
 	public void cacheResult(ShoppingOrder shoppingOrder) {
 		EntityCacheUtil.putResult(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
@@ -150,20 +143,19 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 
 		FinderCacheUtil.putResult(FINDER_PATH_FETCH_BY_PPTXNID,
 			new Object[] { shoppingOrder.getPpTxnId() }, shoppingOrder);
-
-		shoppingOrder.resetOriginalValues();
 	}
 
 	/**
 	 * Caches the shopping orders in the entity cache if it is enabled.
 	 *
-	 * @param shoppingOrders the shopping orders
+	 * @param shoppingOrders the shopping orders to cache
 	 */
 	public void cacheResult(List<ShoppingOrder> shoppingOrders) {
 		for (ShoppingOrder shoppingOrder : shoppingOrders) {
 			if (EntityCacheUtil.getResult(
 						ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
-						ShoppingOrderImpl.class, shoppingOrder.getPrimaryKey()) == null) {
+						ShoppingOrderImpl.class, shoppingOrder.getPrimaryKey(),
+						this) == null) {
 				cacheResult(shoppingOrder);
 			}
 		}
@@ -176,12 +168,8 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	 * The {@link com.liferay.portal.kernel.dao.orm.EntityCache} and {@link com.liferay.portal.kernel.dao.orm.FinderCache} are both cleared by this method.
 	 * </p>
 	 */
-	@Override
 	public void clearCache() {
-		if (_HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE) {
-			CacheRegistryUtil.clear(ShoppingOrderImpl.class.getName());
-		}
-
+		CacheRegistryUtil.clear(ShoppingOrderImpl.class.getName());
 		EntityCacheUtil.clearCache(ShoppingOrderImpl.class.getName());
 		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_ENTITY);
 		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST);
@@ -194,12 +182,9 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	 * The {@link com.liferay.portal.kernel.dao.orm.EntityCache} and {@link com.liferay.portal.kernel.dao.orm.FinderCache} are both cleared by this method.
 	 * </p>
 	 */
-	@Override
 	public void clearCache(ShoppingOrder shoppingOrder) {
 		EntityCacheUtil.removeResult(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
 			ShoppingOrderImpl.class, shoppingOrder.getPrimaryKey());
-
-		FinderCacheUtil.removeResult(FINDER_PATH_FIND_ALL, FINDER_ARGS_EMPTY);
 
 		FinderCacheUtil.removeResult(FINDER_PATH_FETCH_BY_NUMBER,
 			new Object[] { shoppingOrder.getNumber() });
@@ -226,12 +211,11 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	/**
 	 * Removes the shopping order with the primary key from the database. Also notifies the appropriate model listeners.
 	 *
-	 * @param primaryKey the primary key of the shopping order
+	 * @param primaryKey the primary key of the shopping order to remove
 	 * @return the shopping order that was removed
 	 * @throws com.liferay.portal.NoSuchModelException if a shopping order with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
-	@Override
 	public ShoppingOrder remove(Serializable primaryKey)
 		throws NoSuchModelException, SystemException {
 		return remove(((Long)primaryKey).longValue());
@@ -240,7 +224,7 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	/**
 	 * Removes the shopping order with the primary key from the database. Also notifies the appropriate model listeners.
 	 *
-	 * @param orderId the primary key of the shopping order
+	 * @param orderId the primary key of the shopping order to remove
 	 * @return the shopping order that was removed
 	 * @throws com.liferay.shopping.NoSuchOrderException if a shopping order with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -253,7 +237,7 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 			session = openSession();
 
 			ShoppingOrder shoppingOrder = (ShoppingOrder)session.get(ShoppingOrderImpl.class,
-					Long.valueOf(orderId));
+					new Long(orderId));
 
 			if (shoppingOrder == null) {
 				if (_log.isWarnEnabled()) {
@@ -264,7 +248,7 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 					orderId);
 			}
 
-			return shoppingOrderPersistence.remove(shoppingOrder);
+			return remove(shoppingOrder);
 		}
 		catch (NoSuchOrderException nsee) {
 			throw nsee;
@@ -277,20 +261,6 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 		}
 	}
 
-	/**
-	 * Removes the shopping order from the database. Also notifies the appropriate model listeners.
-	 *
-	 * @param shoppingOrder the shopping order
-	 * @return the shopping order that was removed
-	 * @throws SystemException if a system exception occurred
-	 */
-	@Override
-	public ShoppingOrder remove(ShoppingOrder shoppingOrder)
-		throws SystemException {
-		return super.remove(shoppingOrder);
-	}
-
-	@Override
 	protected ShoppingOrder removeImpl(ShoppingOrder shoppingOrder)
 		throws SystemException {
 		shoppingOrder = toUnwrappedModel(shoppingOrder);
@@ -325,7 +295,6 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 		return shoppingOrder;
 	}
 
-	@Override
 	public ShoppingOrder updateImpl(
 		com.liferay.shopping.model.ShoppingOrder shoppingOrder, boolean merge)
 		throws SystemException {
@@ -454,23 +423,22 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the shopping order with the primary key or throws a {@link com.liferay.portal.NoSuchModelException} if it could not be found.
+	 * Finds the shopping order with the primary key or throws a {@link com.liferay.portal.NoSuchModelException} if it could not be found.
 	 *
-	 * @param primaryKey the primary key of the shopping order
+	 * @param primaryKey the primary key of the shopping order to find
 	 * @return the shopping order
 	 * @throws com.liferay.portal.NoSuchModelException if a shopping order with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
-	@Override
 	public ShoppingOrder findByPrimaryKey(Serializable primaryKey)
 		throws NoSuchModelException, SystemException {
 		return findByPrimaryKey(((Long)primaryKey).longValue());
 	}
 
 	/**
-	 * Returns the shopping order with the primary key or throws a {@link com.liferay.shopping.NoSuchOrderException} if it could not be found.
+	 * Finds the shopping order with the primary key or throws a {@link com.liferay.shopping.NoSuchOrderException} if it could not be found.
 	 *
-	 * @param orderId the primary key of the shopping order
+	 * @param orderId the primary key of the shopping order to find
 	 * @return the shopping order
 	 * @throws com.liferay.shopping.NoSuchOrderException if a shopping order with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -492,57 +460,44 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the shopping order with the primary key or returns <code>null</code> if it could not be found.
+	 * Finds the shopping order with the primary key or returns <code>null</code> if it could not be found.
 	 *
-	 * @param primaryKey the primary key of the shopping order
+	 * @param primaryKey the primary key of the shopping order to find
 	 * @return the shopping order, or <code>null</code> if a shopping order with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
-	@Override
 	public ShoppingOrder fetchByPrimaryKey(Serializable primaryKey)
 		throws SystemException {
 		return fetchByPrimaryKey(((Long)primaryKey).longValue());
 	}
 
 	/**
-	 * Returns the shopping order with the primary key or returns <code>null</code> if it could not be found.
+	 * Finds the shopping order with the primary key or returns <code>null</code> if it could not be found.
 	 *
-	 * @param orderId the primary key of the shopping order
+	 * @param orderId the primary key of the shopping order to find
 	 * @return the shopping order, or <code>null</code> if a shopping order with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
 	public ShoppingOrder fetchByPrimaryKey(long orderId)
 		throws SystemException {
 		ShoppingOrder shoppingOrder = (ShoppingOrder)EntityCacheUtil.getResult(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
-				ShoppingOrderImpl.class, orderId);
-
-		if (shoppingOrder == _nullShoppingOrder) {
-			return null;
-		}
+				ShoppingOrderImpl.class, orderId, this);
 
 		if (shoppingOrder == null) {
 			Session session = null;
-
-			boolean hasException = false;
 
 			try {
 				session = openSession();
 
 				shoppingOrder = (ShoppingOrder)session.get(ShoppingOrderImpl.class,
-						Long.valueOf(orderId));
+						new Long(orderId));
 			}
 			catch (Exception e) {
-				hasException = true;
-
 				throw processException(e);
 			}
 			finally {
 				if (shoppingOrder != null) {
 					cacheResult(shoppingOrder);
-				}
-				else if (!hasException) {
-					EntityCacheUtil.putResult(ShoppingOrderModelImpl.ENTITY_CACHE_ENABLED,
-						ShoppingOrderImpl.class, orderId, _nullShoppingOrder);
 				}
 
 				closeSession(session);
@@ -553,9 +508,9 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns all the shopping orders where groupId = &#63;.
+	 * Finds all the shopping orders where groupId = &#63;.
 	 *
-	 * @param groupId the group ID
+	 * @param groupId the group id to search with
 	 * @return the matching shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -565,15 +520,15 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns a range of all the shopping orders where groupId = &#63;.
+	 * Finds a range of all the shopping orders where groupId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param start the lower bound of the range of shopping orders
-	 * @param end the upper bound of the range of shopping orders (not inclusive)
+	 * @param groupId the group id to search with
+	 * @param start the lower bound of the range of shopping orders to return
+	 * @param end the upper bound of the range of shopping orders to return (not inclusive)
 	 * @return the range of matching shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -583,16 +538,16 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns an ordered range of all the shopping orders where groupId = &#63;.
+	 * Finds an ordered range of all the shopping orders where groupId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param start the lower bound of the range of shopping orders
-	 * @param end the upper bound of the range of shopping orders (not inclusive)
-	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param start the lower bound of the range of shopping orders to return
+	 * @param end the upper bound of the range of shopping orders to return (not inclusive)
+	 * @param orderByComparator the comparator to order the results by
 	 * @return the ordered range of matching shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -601,7 +556,8 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 		Object[] finderArgs = new Object[] {
 				groupId,
 				
-				start, end, orderByComparator
+				String.valueOf(start), String.valueOf(end),
+				String.valueOf(orderByComparator)
 			};
 
 		List<ShoppingOrder> list = (List<ShoppingOrder>)FinderCacheUtil.getResult(FINDER_PATH_FIND_BY_GROUPID,
@@ -670,14 +626,14 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the first shopping order in the ordered set where groupId = &#63;.
+	 * Finds the first shopping order in the ordered set where groupId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param orderByComparator the comparator to order the set by
 	 * @return the first matching shopping order
 	 * @throws com.liferay.shopping.NoSuchOrderException if a matching shopping order could not be found
 	 * @throws SystemException if a system exception occurred
@@ -706,14 +662,14 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the last shopping order in the ordered set where groupId = &#63;.
+	 * Finds the last shopping order in the ordered set where groupId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param orderByComparator the comparator to order the set by
 	 * @return the last matching shopping order
 	 * @throws com.liferay.shopping.NoSuchOrderException if a matching shopping order could not be found
 	 * @throws SystemException if a system exception occurred
@@ -744,15 +700,15 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the shopping orders before and after the current shopping order in the ordered set where groupId = &#63;.
+	 * Finds the shopping orders before and after the current shopping order in the ordered set where groupId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
 	 * @param orderId the primary key of the current shopping order
-	 * @param groupId the group ID
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param orderByComparator the comparator to order the set by
 	 * @return the previous, current, and next shopping order
 	 * @throws com.liferay.shopping.NoSuchOrderException if a shopping order with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -805,17 +761,17 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 		query.append(_FINDER_COLUMN_GROUPID_GROUPID_2);
 
 		if (orderByComparator != null) {
-			String[] orderByConditionFields = orderByComparator.getOrderByConditionFields();
+			String[] orderByFields = orderByComparator.getOrderByFields();
 
-			if (orderByConditionFields.length > 0) {
+			if (orderByFields.length > 0) {
 				query.append(WHERE_AND);
 			}
 
-			for (int i = 0; i < orderByConditionFields.length; i++) {
+			for (int i = 0; i < orderByFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
-				query.append(orderByConditionFields[i]);
+				query.append(orderByFields[i]);
 
-				if ((i + 1) < orderByConditionFields.length) {
+				if ((i + 1) < orderByFields.length) {
 					if (orderByComparator.isAscending() ^ previous) {
 						query.append(WHERE_GREATER_THAN_HAS_NEXT);
 					}
@@ -834,8 +790,6 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 			}
 
 			query.append(ORDER_BY_CLAUSE);
-
-			String[] orderByFields = orderByComparator.getOrderByFields();
 
 			for (int i = 0; i < orderByFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
@@ -876,7 +830,7 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 		qPos.add(groupId);
 
 		if (orderByComparator != null) {
-			Object[] values = orderByComparator.getOrderByConditionValues(shoppingOrder);
+			Object[] values = orderByComparator.getOrderByValues(shoppingOrder);
 
 			for (Object value : values) {
 				qPos.add(value);
@@ -894,321 +848,9 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns all the shopping orders that the user has permission to view where groupId = &#63;.
+	 * Finds the shopping order where number = &#63; or throws a {@link com.liferay.shopping.NoSuchOrderException} if it could not be found.
 	 *
-	 * @param groupId the group ID
-	 * @return the matching shopping orders that the user has permission to view
-	 * @throws SystemException if a system exception occurred
-	 */
-	public List<ShoppingOrder> filterFindByGroupId(long groupId)
-		throws SystemException {
-		return filterFindByGroupId(groupId, QueryUtil.ALL_POS,
-			QueryUtil.ALL_POS, null);
-	}
-
-	/**
-	 * Returns a range of all the shopping orders that the user has permission to view where groupId = &#63;.
-	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
-	 *
-	 * @param groupId the group ID
-	 * @param start the lower bound of the range of shopping orders
-	 * @param end the upper bound of the range of shopping orders (not inclusive)
-	 * @return the range of matching shopping orders that the user has permission to view
-	 * @throws SystemException if a system exception occurred
-	 */
-	public List<ShoppingOrder> filterFindByGroupId(long groupId, int start,
-		int end) throws SystemException {
-		return filterFindByGroupId(groupId, start, end, null);
-	}
-
-	/**
-	 * Returns an ordered range of all the shopping orders that the user has permissions to view where groupId = &#63;.
-	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
-	 *
-	 * @param groupId the group ID
-	 * @param start the lower bound of the range of shopping orders
-	 * @param end the upper bound of the range of shopping orders (not inclusive)
-	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
-	 * @return the ordered range of matching shopping orders that the user has permission to view
-	 * @throws SystemException if a system exception occurred
-	 */
-	public List<ShoppingOrder> filterFindByGroupId(long groupId, int start,
-		int end, OrderByComparator orderByComparator) throws SystemException {
-		if (!InlineSQLHelperUtil.isEnabled(groupId)) {
-			return findByGroupId(groupId, start, end, orderByComparator);
-		}
-
-		StringBundler query = null;
-
-		if (orderByComparator != null) {
-			query = new StringBundler(3 +
-					(orderByComparator.getOrderByFields().length * 3));
-		}
-		else {
-			query = new StringBundler(3);
-		}
-
-		if (getDB().isSupportsInlineDistinct()) {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_WHERE);
-		}
-		else {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_NO_INLINE_DISTINCT_WHERE_1);
-		}
-
-		query.append(_FINDER_COLUMN_GROUPID_GROUPID_2);
-
-		if (!getDB().isSupportsInlineDistinct()) {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_NO_INLINE_DISTINCT_WHERE_2);
-		}
-
-		if (orderByComparator != null) {
-			if (getDB().isSupportsInlineDistinct()) {
-				appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
-					orderByComparator);
-			}
-			else {
-				appendOrderByComparator(query, _ORDER_BY_ENTITY_TABLE,
-					orderByComparator);
-			}
-		}
-
-		else {
-			if (getDB().isSupportsInlineDistinct()) {
-				query.append(ShoppingOrderModelImpl.ORDER_BY_JPQL);
-			}
-			else {
-				query.append(ShoppingOrderModelImpl.ORDER_BY_SQL);
-			}
-		}
-
-		String sql = InlineSQLHelperUtil.replacePermissionCheck(query.toString(),
-				ShoppingOrder.class.getName(),
-				_FILTER_ENTITY_TABLE_FILTER_PK_COLUMN, groupId);
-
-		Session session = null;
-
-		try {
-			session = openSession();
-
-			SQLQuery q = session.createSQLQuery(sql);
-
-			if (getDB().isSupportsInlineDistinct()) {
-				q.addEntity(_FILTER_ENTITY_ALIAS, ShoppingOrderImpl.class);
-			}
-			else {
-				q.addEntity(_FILTER_ENTITY_TABLE, ShoppingOrderImpl.class);
-			}
-
-			QueryPos qPos = QueryPos.getInstance(q);
-
-			qPos.add(groupId);
-
-			return (List<ShoppingOrder>)QueryUtil.list(q, getDialect(), start,
-				end);
-		}
-		catch (Exception e) {
-			throw processException(e);
-		}
-		finally {
-			closeSession(session);
-		}
-	}
-
-	/**
-	 * Returns the shopping orders before and after the current shopping order in the ordered set of shopping orders that the user has permission to view where groupId = &#63;.
-	 *
-	 * @param orderId the primary key of the current shopping order
-	 * @param groupId the group ID
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
-	 * @return the previous, current, and next shopping order
-	 * @throws com.liferay.shopping.NoSuchOrderException if a shopping order with the primary key could not be found
-	 * @throws SystemException if a system exception occurred
-	 */
-	public ShoppingOrder[] filterFindByGroupId_PrevAndNext(long orderId,
-		long groupId, OrderByComparator orderByComparator)
-		throws NoSuchOrderException, SystemException {
-		if (!InlineSQLHelperUtil.isEnabled(groupId)) {
-			return findByGroupId_PrevAndNext(orderId, groupId, orderByComparator);
-		}
-
-		ShoppingOrder shoppingOrder = findByPrimaryKey(orderId);
-
-		Session session = null;
-
-		try {
-			session = openSession();
-
-			ShoppingOrder[] array = new ShoppingOrderImpl[3];
-
-			array[0] = filterGetByGroupId_PrevAndNext(session, shoppingOrder,
-					groupId, orderByComparator, true);
-
-			array[1] = shoppingOrder;
-
-			array[2] = filterGetByGroupId_PrevAndNext(session, shoppingOrder,
-					groupId, orderByComparator, false);
-
-			return array;
-		}
-		catch (Exception e) {
-			throw processException(e);
-		}
-		finally {
-			closeSession(session);
-		}
-	}
-
-	protected ShoppingOrder filterGetByGroupId_PrevAndNext(Session session,
-		ShoppingOrder shoppingOrder, long groupId,
-		OrderByComparator orderByComparator, boolean previous) {
-		StringBundler query = null;
-
-		if (orderByComparator != null) {
-			query = new StringBundler(6 +
-					(orderByComparator.getOrderByFields().length * 6));
-		}
-		else {
-			query = new StringBundler(3);
-		}
-
-		if (getDB().isSupportsInlineDistinct()) {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_WHERE);
-		}
-		else {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_NO_INLINE_DISTINCT_WHERE_1);
-		}
-
-		query.append(_FINDER_COLUMN_GROUPID_GROUPID_2);
-
-		if (!getDB().isSupportsInlineDistinct()) {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_NO_INLINE_DISTINCT_WHERE_2);
-		}
-
-		if (orderByComparator != null) {
-			String[] orderByConditionFields = orderByComparator.getOrderByConditionFields();
-
-			if (orderByConditionFields.length > 0) {
-				query.append(WHERE_AND);
-			}
-
-			for (int i = 0; i < orderByConditionFields.length; i++) {
-				if (getDB().isSupportsInlineDistinct()) {
-					query.append(_ORDER_BY_ENTITY_ALIAS);
-				}
-				else {
-					query.append(_ORDER_BY_ENTITY_TABLE);
-				}
-
-				query.append(orderByConditionFields[i]);
-
-				if ((i + 1) < orderByConditionFields.length) {
-					if (orderByComparator.isAscending() ^ previous) {
-						query.append(WHERE_GREATER_THAN_HAS_NEXT);
-					}
-					else {
-						query.append(WHERE_LESSER_THAN_HAS_NEXT);
-					}
-				}
-				else {
-					if (orderByComparator.isAscending() ^ previous) {
-						query.append(WHERE_GREATER_THAN);
-					}
-					else {
-						query.append(WHERE_LESSER_THAN);
-					}
-				}
-			}
-
-			query.append(ORDER_BY_CLAUSE);
-
-			String[] orderByFields = orderByComparator.getOrderByFields();
-
-			for (int i = 0; i < orderByFields.length; i++) {
-				if (getDB().isSupportsInlineDistinct()) {
-					query.append(_ORDER_BY_ENTITY_ALIAS);
-				}
-				else {
-					query.append(_ORDER_BY_ENTITY_TABLE);
-				}
-
-				query.append(orderByFields[i]);
-
-				if ((i + 1) < orderByFields.length) {
-					if (orderByComparator.isAscending() ^ previous) {
-						query.append(ORDER_BY_ASC_HAS_NEXT);
-					}
-					else {
-						query.append(ORDER_BY_DESC_HAS_NEXT);
-					}
-				}
-				else {
-					if (orderByComparator.isAscending() ^ previous) {
-						query.append(ORDER_BY_ASC);
-					}
-					else {
-						query.append(ORDER_BY_DESC);
-					}
-				}
-			}
-		}
-
-		else {
-			if (getDB().isSupportsInlineDistinct()) {
-				query.append(ShoppingOrderModelImpl.ORDER_BY_JPQL);
-			}
-			else {
-				query.append(ShoppingOrderModelImpl.ORDER_BY_SQL);
-			}
-		}
-
-		String sql = InlineSQLHelperUtil.replacePermissionCheck(query.toString(),
-				ShoppingOrder.class.getName(),
-				_FILTER_ENTITY_TABLE_FILTER_PK_COLUMN, groupId);
-
-		SQLQuery q = session.createSQLQuery(sql);
-
-		q.setFirstResult(0);
-		q.setMaxResults(2);
-
-		if (getDB().isSupportsInlineDistinct()) {
-			q.addEntity(_FILTER_ENTITY_ALIAS, ShoppingOrderImpl.class);
-		}
-		else {
-			q.addEntity(_FILTER_ENTITY_TABLE, ShoppingOrderImpl.class);
-		}
-
-		QueryPos qPos = QueryPos.getInstance(q);
-
-		qPos.add(groupId);
-
-		if (orderByComparator != null) {
-			Object[] values = orderByComparator.getOrderByConditionValues(shoppingOrder);
-
-			for (Object value : values) {
-				qPos.add(value);
-			}
-		}
-
-		List<ShoppingOrder> list = q.list();
-
-		if (list.size() == 2) {
-			return list.get(1);
-		}
-		else {
-			return null;
-		}
-	}
-
-	/**
-	 * Returns the shopping order where number = &#63; or throws a {@link com.liferay.shopping.NoSuchOrderException} if it could not be found.
-	 *
-	 * @param number the number
+	 * @param number the number to search with
 	 * @return the matching shopping order
 	 * @throws com.liferay.shopping.NoSuchOrderException if a matching shopping order could not be found
 	 * @throws SystemException if a system exception occurred
@@ -1238,9 +880,9 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the shopping order where number = &#63; or returns <code>null</code> if it could not be found. Uses the finder cache.
+	 * Finds the shopping order where number = &#63; or returns <code>null</code> if it could not be found. Uses the finder cache.
 	 *
-	 * @param number the number
+	 * @param number the number to search with
 	 * @return the matching shopping order, or <code>null</code> if a matching shopping order could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1249,10 +891,9 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the shopping order where number = &#63; or returns <code>null</code> if it could not be found, optionally using the finder cache.
+	 * Finds the shopping order where number = &#63; or returns <code>null</code> if it could not be found, optionally using the finder cache.
 	 *
-	 * @param number the number
-	 * @param retrieveFromCache whether to use the finder cache
+	 * @param number the number to search with
 	 * @return the matching shopping order, or <code>null</code> if a matching shopping order could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1348,9 +989,9 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the shopping order where ppTxnId = &#63; or throws a {@link com.liferay.shopping.NoSuchOrderException} if it could not be found.
+	 * Finds the shopping order where ppTxnId = &#63; or throws a {@link com.liferay.shopping.NoSuchOrderException} if it could not be found.
 	 *
-	 * @param ppTxnId the pp txn ID
+	 * @param ppTxnId the pp txn id to search with
 	 * @return the matching shopping order
 	 * @throws com.liferay.shopping.NoSuchOrderException if a matching shopping order could not be found
 	 * @throws SystemException if a system exception occurred
@@ -1380,9 +1021,9 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the shopping order where ppTxnId = &#63; or returns <code>null</code> if it could not be found. Uses the finder cache.
+	 * Finds the shopping order where ppTxnId = &#63; or returns <code>null</code> if it could not be found. Uses the finder cache.
 	 *
-	 * @param ppTxnId the pp txn ID
+	 * @param ppTxnId the pp txn id to search with
 	 * @return the matching shopping order, or <code>null</code> if a matching shopping order could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1392,10 +1033,9 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the shopping order where ppTxnId = &#63; or returns <code>null</code> if it could not be found, optionally using the finder cache.
+	 * Finds the shopping order where ppTxnId = &#63; or returns <code>null</code> if it could not be found, optionally using the finder cache.
 	 *
-	 * @param ppTxnId the pp txn ID
-	 * @param retrieveFromCache whether to use the finder cache
+	 * @param ppTxnId the pp txn id to search with
 	 * @return the matching shopping order, or <code>null</code> if a matching shopping order could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1491,11 +1131,11 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns all the shopping orders where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
+	 * Finds all the shopping orders where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
 	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
+	 * @param groupId the group id to search with
+	 * @param userId the user id to search with
+	 * @param ppPaymentStatus the pp payment status to search with
 	 * @return the matching shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1506,17 +1146,17 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns a range of all the shopping orders where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
+	 * Finds a range of all the shopping orders where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
-	 * @param start the lower bound of the range of shopping orders
-	 * @param end the upper bound of the range of shopping orders (not inclusive)
+	 * @param groupId the group id to search with
+	 * @param userId the user id to search with
+	 * @param ppPaymentStatus the pp payment status to search with
+	 * @param start the lower bound of the range of shopping orders to return
+	 * @param end the upper bound of the range of shopping orders to return (not inclusive)
 	 * @return the range of matching shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1526,18 +1166,18 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns an ordered range of all the shopping orders where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
+	 * Finds an ordered range of all the shopping orders where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
-	 * @param start the lower bound of the range of shopping orders
-	 * @param end the upper bound of the range of shopping orders (not inclusive)
-	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param userId the user id to search with
+	 * @param ppPaymentStatus the pp payment status to search with
+	 * @param start the lower bound of the range of shopping orders to return
+	 * @param end the upper bound of the range of shopping orders to return (not inclusive)
+	 * @param orderByComparator the comparator to order the results by
 	 * @return the ordered range of matching shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1547,7 +1187,8 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 		Object[] finderArgs = new Object[] {
 				groupId, userId, ppPaymentStatus,
 				
-				start, end, orderByComparator
+				String.valueOf(start), String.valueOf(end),
+				String.valueOf(orderByComparator)
 			};
 
 		List<ShoppingOrder> list = (List<ShoppingOrder>)FinderCacheUtil.getResult(FINDER_PATH_FIND_BY_G_U_PPPS,
@@ -1636,16 +1277,16 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the first shopping order in the ordered set where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
+	 * Finds the first shopping order in the ordered set where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param userId the user id to search with
+	 * @param ppPaymentStatus the pp payment status to search with
+	 * @param orderByComparator the comparator to order the set by
 	 * @return the first matching shopping order
 	 * @throws com.liferay.shopping.NoSuchOrderException if a matching shopping order could not be found
 	 * @throws SystemException if a system exception occurred
@@ -1680,16 +1321,16 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the last shopping order in the ordered set where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
+	 * Finds the last shopping order in the ordered set where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param userId the user id to search with
+	 * @param ppPaymentStatus the pp payment status to search with
+	 * @param orderByComparator the comparator to order the set by
 	 * @return the last matching shopping order
 	 * @throws com.liferay.shopping.NoSuchOrderException if a matching shopping order could not be found
 	 * @throws SystemException if a system exception occurred
@@ -1726,17 +1367,17 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the shopping orders before and after the current shopping order in the ordered set where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
+	 * Finds the shopping orders before and after the current shopping order in the ordered set where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
 	 * @param orderId the primary key of the current shopping order
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @param groupId the group id to search with
+	 * @param userId the user id to search with
+	 * @param ppPaymentStatus the pp payment status to search with
+	 * @param orderByComparator the comparator to order the set by
 	 * @return the previous, current, and next shopping order
 	 * @throws com.liferay.shopping.NoSuchOrderException if a shopping order with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -1805,17 +1446,17 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 		}
 
 		if (orderByComparator != null) {
-			String[] orderByConditionFields = orderByComparator.getOrderByConditionFields();
+			String[] orderByFields = orderByComparator.getOrderByFields();
 
-			if (orderByConditionFields.length > 0) {
+			if (orderByFields.length > 0) {
 				query.append(WHERE_AND);
 			}
 
-			for (int i = 0; i < orderByConditionFields.length; i++) {
+			for (int i = 0; i < orderByFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
-				query.append(orderByConditionFields[i]);
+				query.append(orderByFields[i]);
 
-				if ((i + 1) < orderByConditionFields.length) {
+				if ((i + 1) < orderByFields.length) {
 					if (orderByComparator.isAscending() ^ previous) {
 						query.append(WHERE_GREATER_THAN_HAS_NEXT);
 					}
@@ -1834,8 +1475,6 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 			}
 
 			query.append(ORDER_BY_CLAUSE);
-
-			String[] orderByFields = orderByComparator.getOrderByFields();
 
 			for (int i = 0; i < orderByFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
@@ -1882,7 +1521,7 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 		}
 
 		if (orderByComparator != null) {
-			Object[] values = orderByComparator.getOrderByConditionValues(shoppingOrder);
+			Object[] values = orderByComparator.getOrderByValues(shoppingOrder);
 
 			for (Object value : values) {
 				qPos.add(value);
@@ -1900,373 +1539,7 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns all the shopping orders that the user has permission to view where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
-	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
-	 * @return the matching shopping orders that the user has permission to view
-	 * @throws SystemException if a system exception occurred
-	 */
-	public List<ShoppingOrder> filterFindByG_U_PPPS(long groupId, long userId,
-		String ppPaymentStatus) throws SystemException {
-		return filterFindByG_U_PPPS(groupId, userId, ppPaymentStatus,
-			QueryUtil.ALL_POS, QueryUtil.ALL_POS, null);
-	}
-
-	/**
-	 * Returns a range of all the shopping orders that the user has permission to view where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
-	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
-	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
-	 * @param start the lower bound of the range of shopping orders
-	 * @param end the upper bound of the range of shopping orders (not inclusive)
-	 * @return the range of matching shopping orders that the user has permission to view
-	 * @throws SystemException if a system exception occurred
-	 */
-	public List<ShoppingOrder> filterFindByG_U_PPPS(long groupId, long userId,
-		String ppPaymentStatus, int start, int end) throws SystemException {
-		return filterFindByG_U_PPPS(groupId, userId, ppPaymentStatus, start,
-			end, null);
-	}
-
-	/**
-	 * Returns an ordered range of all the shopping orders that the user has permissions to view where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
-	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
-	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
-	 * @param start the lower bound of the range of shopping orders
-	 * @param end the upper bound of the range of shopping orders (not inclusive)
-	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
-	 * @return the ordered range of matching shopping orders that the user has permission to view
-	 * @throws SystemException if a system exception occurred
-	 */
-	public List<ShoppingOrder> filterFindByG_U_PPPS(long groupId, long userId,
-		String ppPaymentStatus, int start, int end,
-		OrderByComparator orderByComparator) throws SystemException {
-		if (!InlineSQLHelperUtil.isEnabled(groupId)) {
-			return findByG_U_PPPS(groupId, userId, ppPaymentStatus, start, end,
-				orderByComparator);
-		}
-
-		StringBundler query = null;
-
-		if (orderByComparator != null) {
-			query = new StringBundler(5 +
-					(orderByComparator.getOrderByFields().length * 3));
-		}
-		else {
-			query = new StringBundler(5);
-		}
-
-		if (getDB().isSupportsInlineDistinct()) {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_WHERE);
-		}
-		else {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_NO_INLINE_DISTINCT_WHERE_1);
-		}
-
-		query.append(_FINDER_COLUMN_G_U_PPPS_GROUPID_2);
-
-		query.append(_FINDER_COLUMN_G_U_PPPS_USERID_2);
-
-		if (ppPaymentStatus == null) {
-			query.append(_FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_1);
-		}
-		else {
-			if (ppPaymentStatus.equals(StringPool.BLANK)) {
-				query.append(_FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_3);
-			}
-			else {
-				query.append(_FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_2);
-			}
-		}
-
-		if (!getDB().isSupportsInlineDistinct()) {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_NO_INLINE_DISTINCT_WHERE_2);
-		}
-
-		if (orderByComparator != null) {
-			if (getDB().isSupportsInlineDistinct()) {
-				appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
-					orderByComparator);
-			}
-			else {
-				appendOrderByComparator(query, _ORDER_BY_ENTITY_TABLE,
-					orderByComparator);
-			}
-		}
-
-		else {
-			if (getDB().isSupportsInlineDistinct()) {
-				query.append(ShoppingOrderModelImpl.ORDER_BY_JPQL);
-			}
-			else {
-				query.append(ShoppingOrderModelImpl.ORDER_BY_SQL);
-			}
-		}
-
-		String sql = InlineSQLHelperUtil.replacePermissionCheck(query.toString(),
-				ShoppingOrder.class.getName(),
-				_FILTER_ENTITY_TABLE_FILTER_PK_COLUMN, groupId);
-
-		Session session = null;
-
-		try {
-			session = openSession();
-
-			SQLQuery q = session.createSQLQuery(sql);
-
-			if (getDB().isSupportsInlineDistinct()) {
-				q.addEntity(_FILTER_ENTITY_ALIAS, ShoppingOrderImpl.class);
-			}
-			else {
-				q.addEntity(_FILTER_ENTITY_TABLE, ShoppingOrderImpl.class);
-			}
-
-			QueryPos qPos = QueryPos.getInstance(q);
-
-			qPos.add(groupId);
-
-			qPos.add(userId);
-
-			if (ppPaymentStatus != null) {
-				qPos.add(ppPaymentStatus);
-			}
-
-			return (List<ShoppingOrder>)QueryUtil.list(q, getDialect(), start,
-				end);
-		}
-		catch (Exception e) {
-			throw processException(e);
-		}
-		finally {
-			closeSession(session);
-		}
-	}
-
-	/**
-	 * Returns the shopping orders before and after the current shopping order in the ordered set of shopping orders that the user has permission to view where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
-	 *
-	 * @param orderId the primary key of the current shopping order
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
-	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
-	 * @return the previous, current, and next shopping order
-	 * @throws com.liferay.shopping.NoSuchOrderException if a shopping order with the primary key could not be found
-	 * @throws SystemException if a system exception occurred
-	 */
-	public ShoppingOrder[] filterFindByG_U_PPPS_PrevAndNext(long orderId,
-		long groupId, long userId, String ppPaymentStatus,
-		OrderByComparator orderByComparator)
-		throws NoSuchOrderException, SystemException {
-		if (!InlineSQLHelperUtil.isEnabled(groupId)) {
-			return findByG_U_PPPS_PrevAndNext(orderId, groupId, userId,
-				ppPaymentStatus, orderByComparator);
-		}
-
-		ShoppingOrder shoppingOrder = findByPrimaryKey(orderId);
-
-		Session session = null;
-
-		try {
-			session = openSession();
-
-			ShoppingOrder[] array = new ShoppingOrderImpl[3];
-
-			array[0] = filterGetByG_U_PPPS_PrevAndNext(session, shoppingOrder,
-					groupId, userId, ppPaymentStatus, orderByComparator, true);
-
-			array[1] = shoppingOrder;
-
-			array[2] = filterGetByG_U_PPPS_PrevAndNext(session, shoppingOrder,
-					groupId, userId, ppPaymentStatus, orderByComparator, false);
-
-			return array;
-		}
-		catch (Exception e) {
-			throw processException(e);
-		}
-		finally {
-			closeSession(session);
-		}
-	}
-
-	protected ShoppingOrder filterGetByG_U_PPPS_PrevAndNext(Session session,
-		ShoppingOrder shoppingOrder, long groupId, long userId,
-		String ppPaymentStatus, OrderByComparator orderByComparator,
-		boolean previous) {
-		StringBundler query = null;
-
-		if (orderByComparator != null) {
-			query = new StringBundler(6 +
-					(orderByComparator.getOrderByFields().length * 6));
-		}
-		else {
-			query = new StringBundler(3);
-		}
-
-		if (getDB().isSupportsInlineDistinct()) {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_WHERE);
-		}
-		else {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_NO_INLINE_DISTINCT_WHERE_1);
-		}
-
-		query.append(_FINDER_COLUMN_G_U_PPPS_GROUPID_2);
-
-		query.append(_FINDER_COLUMN_G_U_PPPS_USERID_2);
-
-		if (ppPaymentStatus == null) {
-			query.append(_FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_1);
-		}
-		else {
-			if (ppPaymentStatus.equals(StringPool.BLANK)) {
-				query.append(_FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_3);
-			}
-			else {
-				query.append(_FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_2);
-			}
-		}
-
-		if (!getDB().isSupportsInlineDistinct()) {
-			query.append(_FILTER_SQL_SELECT_SHOPPINGORDER_NO_INLINE_DISTINCT_WHERE_2);
-		}
-
-		if (orderByComparator != null) {
-			String[] orderByConditionFields = orderByComparator.getOrderByConditionFields();
-
-			if (orderByConditionFields.length > 0) {
-				query.append(WHERE_AND);
-			}
-
-			for (int i = 0; i < orderByConditionFields.length; i++) {
-				if (getDB().isSupportsInlineDistinct()) {
-					query.append(_ORDER_BY_ENTITY_ALIAS);
-				}
-				else {
-					query.append(_ORDER_BY_ENTITY_TABLE);
-				}
-
-				query.append(orderByConditionFields[i]);
-
-				if ((i + 1) < orderByConditionFields.length) {
-					if (orderByComparator.isAscending() ^ previous) {
-						query.append(WHERE_GREATER_THAN_HAS_NEXT);
-					}
-					else {
-						query.append(WHERE_LESSER_THAN_HAS_NEXT);
-					}
-				}
-				else {
-					if (orderByComparator.isAscending() ^ previous) {
-						query.append(WHERE_GREATER_THAN);
-					}
-					else {
-						query.append(WHERE_LESSER_THAN);
-					}
-				}
-			}
-
-			query.append(ORDER_BY_CLAUSE);
-
-			String[] orderByFields = orderByComparator.getOrderByFields();
-
-			for (int i = 0; i < orderByFields.length; i++) {
-				if (getDB().isSupportsInlineDistinct()) {
-					query.append(_ORDER_BY_ENTITY_ALIAS);
-				}
-				else {
-					query.append(_ORDER_BY_ENTITY_TABLE);
-				}
-
-				query.append(orderByFields[i]);
-
-				if ((i + 1) < orderByFields.length) {
-					if (orderByComparator.isAscending() ^ previous) {
-						query.append(ORDER_BY_ASC_HAS_NEXT);
-					}
-					else {
-						query.append(ORDER_BY_DESC_HAS_NEXT);
-					}
-				}
-				else {
-					if (orderByComparator.isAscending() ^ previous) {
-						query.append(ORDER_BY_ASC);
-					}
-					else {
-						query.append(ORDER_BY_DESC);
-					}
-				}
-			}
-		}
-
-		else {
-			if (getDB().isSupportsInlineDistinct()) {
-				query.append(ShoppingOrderModelImpl.ORDER_BY_JPQL);
-			}
-			else {
-				query.append(ShoppingOrderModelImpl.ORDER_BY_SQL);
-			}
-		}
-
-		String sql = InlineSQLHelperUtil.replacePermissionCheck(query.toString(),
-				ShoppingOrder.class.getName(),
-				_FILTER_ENTITY_TABLE_FILTER_PK_COLUMN, groupId);
-
-		SQLQuery q = session.createSQLQuery(sql);
-
-		q.setFirstResult(0);
-		q.setMaxResults(2);
-
-		if (getDB().isSupportsInlineDistinct()) {
-			q.addEntity(_FILTER_ENTITY_ALIAS, ShoppingOrderImpl.class);
-		}
-		else {
-			q.addEntity(_FILTER_ENTITY_TABLE, ShoppingOrderImpl.class);
-		}
-
-		QueryPos qPos = QueryPos.getInstance(q);
-
-		qPos.add(groupId);
-
-		qPos.add(userId);
-
-		if (ppPaymentStatus != null) {
-			qPos.add(ppPaymentStatus);
-		}
-
-		if (orderByComparator != null) {
-			Object[] values = orderByComparator.getOrderByConditionValues(shoppingOrder);
-
-			for (Object value : values) {
-				qPos.add(value);
-			}
-		}
-
-		List<ShoppingOrder> list = q.list();
-
-		if (list.size() == 2) {
-			return list.get(1);
-		}
-		else {
-			return null;
-		}
-	}
-
-	/**
-	 * Returns all the shopping orders.
+	 * Finds all the shopping orders.
 	 *
 	 * @return the shopping orders
 	 * @throws SystemException if a system exception occurred
@@ -2276,14 +1549,14 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns a range of all the shopping orders.
+	 * Finds a range of all the shopping orders.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param start the lower bound of the range of shopping orders
-	 * @param end the upper bound of the range of shopping orders (not inclusive)
+	 * @param start the lower bound of the range of shopping orders to return
+	 * @param end the upper bound of the range of shopping orders to return (not inclusive)
 	 * @return the range of shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -2293,21 +1566,24 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns an ordered range of all the shopping orders.
+	 * Finds an ordered range of all the shopping orders.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param start the lower bound of the range of shopping orders
-	 * @param end the upper bound of the range of shopping orders (not inclusive)
-	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
+	 * @param start the lower bound of the range of shopping orders to return
+	 * @param end the upper bound of the range of shopping orders to return (not inclusive)
+	 * @param orderByComparator the comparator to order the results by
 	 * @return the ordered range of shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
 	public List<ShoppingOrder> findAll(int start, int end,
 		OrderByComparator orderByComparator) throws SystemException {
-		Object[] finderArgs = new Object[] { start, end, orderByComparator };
+		Object[] finderArgs = new Object[] {
+				String.valueOf(start), String.valueOf(end),
+				String.valueOf(orderByComparator)
+			};
 
 		List<ShoppingOrder> list = (List<ShoppingOrder>)FinderCacheUtil.getResult(FINDER_PATH_FIND_ALL,
 				finderArgs, this);
@@ -2374,54 +1650,54 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	/**
 	 * Removes all the shopping orders where groupId = &#63; from the database.
 	 *
-	 * @param groupId the group ID
+	 * @param groupId the group id to search with
 	 * @throws SystemException if a system exception occurred
 	 */
 	public void removeByGroupId(long groupId) throws SystemException {
 		for (ShoppingOrder shoppingOrder : findByGroupId(groupId)) {
-			shoppingOrderPersistence.remove(shoppingOrder);
+			remove(shoppingOrder);
 		}
 	}
 
 	/**
 	 * Removes the shopping order where number = &#63; from the database.
 	 *
-	 * @param number the number
+	 * @param number the number to search with
 	 * @throws SystemException if a system exception occurred
 	 */
 	public void removeByNumber(String number)
 		throws NoSuchOrderException, SystemException {
 		ShoppingOrder shoppingOrder = findByNumber(number);
 
-		shoppingOrderPersistence.remove(shoppingOrder);
+		remove(shoppingOrder);
 	}
 
 	/**
 	 * Removes the shopping order where ppTxnId = &#63; from the database.
 	 *
-	 * @param ppTxnId the pp txn ID
+	 * @param ppTxnId the pp txn id to search with
 	 * @throws SystemException if a system exception occurred
 	 */
 	public void removeByPPTxnId(String ppTxnId)
 		throws NoSuchOrderException, SystemException {
 		ShoppingOrder shoppingOrder = findByPPTxnId(ppTxnId);
 
-		shoppingOrderPersistence.remove(shoppingOrder);
+		remove(shoppingOrder);
 	}
 
 	/**
 	 * Removes all the shopping orders where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63; from the database.
 	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
+	 * @param groupId the group id to search with
+	 * @param userId the user id to search with
+	 * @param ppPaymentStatus the pp payment status to search with
 	 * @throws SystemException if a system exception occurred
 	 */
 	public void removeByG_U_PPPS(long groupId, long userId,
 		String ppPaymentStatus) throws SystemException {
 		for (ShoppingOrder shoppingOrder : findByG_U_PPPS(groupId, userId,
 				ppPaymentStatus)) {
-			shoppingOrderPersistence.remove(shoppingOrder);
+			remove(shoppingOrder);
 		}
 	}
 
@@ -2432,14 +1708,14 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	 */
 	public void removeAll() throws SystemException {
 		for (ShoppingOrder shoppingOrder : findAll()) {
-			shoppingOrderPersistence.remove(shoppingOrder);
+			remove(shoppingOrder);
 		}
 	}
 
 	/**
-	 * Returns the number of shopping orders where groupId = &#63;.
+	 * Counts all the shopping orders where groupId = &#63;.
 	 *
-	 * @param groupId the group ID
+	 * @param groupId the group id to search with
 	 * @return the number of matching shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -2490,57 +1766,9 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the number of shopping orders that the user has permission to view where groupId = &#63;.
+	 * Counts all the shopping orders where number = &#63;.
 	 *
-	 * @param groupId the group ID
-	 * @return the number of matching shopping orders that the user has permission to view
-	 * @throws SystemException if a system exception occurred
-	 */
-	public int filterCountByGroupId(long groupId) throws SystemException {
-		if (!InlineSQLHelperUtil.isEnabled(groupId)) {
-			return countByGroupId(groupId);
-		}
-
-		StringBundler query = new StringBundler(2);
-
-		query.append(_FILTER_SQL_COUNT_SHOPPINGORDER_WHERE);
-
-		query.append(_FINDER_COLUMN_GROUPID_GROUPID_2);
-
-		String sql = InlineSQLHelperUtil.replacePermissionCheck(query.toString(),
-				ShoppingOrder.class.getName(),
-				_FILTER_ENTITY_TABLE_FILTER_PK_COLUMN, groupId);
-
-		Session session = null;
-
-		try {
-			session = openSession();
-
-			SQLQuery q = session.createSQLQuery(sql);
-
-			q.addScalar(COUNT_COLUMN_NAME,
-				com.liferay.portal.kernel.dao.orm.Type.LONG);
-
-			QueryPos qPos = QueryPos.getInstance(q);
-
-			qPos.add(groupId);
-
-			Long count = (Long)q.uniqueResult();
-
-			return count.intValue();
-		}
-		catch (Exception e) {
-			throw processException(e);
-		}
-		finally {
-			closeSession(session);
-		}
-	}
-
-	/**
-	 * Returns the number of shopping orders where number = &#63;.
-	 *
-	 * @param number the number
+	 * @param number the number to search with
 	 * @return the number of matching shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -2603,9 +1831,9 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the number of shopping orders where ppTxnId = &#63;.
+	 * Counts all the shopping orders where ppTxnId = &#63;.
 	 *
-	 * @param ppTxnId the pp txn ID
+	 * @param ppTxnId the pp txn id to search with
 	 * @return the number of matching shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -2668,11 +1896,11 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the number of shopping orders where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
+	 * Counts all the shopping orders where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
 	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
+	 * @param groupId the group id to search with
+	 * @param userId the user id to search with
+	 * @param ppPaymentStatus the pp payment status to search with
 	 * @return the number of matching shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -2744,85 +1972,16 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	}
 
 	/**
-	 * Returns the number of shopping orders that the user has permission to view where groupId = &#63; and userId = &#63; and ppPaymentStatus = &#63;.
-	 *
-	 * @param groupId the group ID
-	 * @param userId the user ID
-	 * @param ppPaymentStatus the pp payment status
-	 * @return the number of matching shopping orders that the user has permission to view
-	 * @throws SystemException if a system exception occurred
-	 */
-	public int filterCountByG_U_PPPS(long groupId, long userId,
-		String ppPaymentStatus) throws SystemException {
-		if (!InlineSQLHelperUtil.isEnabled(groupId)) {
-			return countByG_U_PPPS(groupId, userId, ppPaymentStatus);
-		}
-
-		StringBundler query = new StringBundler(4);
-
-		query.append(_FILTER_SQL_COUNT_SHOPPINGORDER_WHERE);
-
-		query.append(_FINDER_COLUMN_G_U_PPPS_GROUPID_2);
-
-		query.append(_FINDER_COLUMN_G_U_PPPS_USERID_2);
-
-		if (ppPaymentStatus == null) {
-			query.append(_FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_1);
-		}
-		else {
-			if (ppPaymentStatus.equals(StringPool.BLANK)) {
-				query.append(_FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_3);
-			}
-			else {
-				query.append(_FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_2);
-			}
-		}
-
-		String sql = InlineSQLHelperUtil.replacePermissionCheck(query.toString(),
-				ShoppingOrder.class.getName(),
-				_FILTER_ENTITY_TABLE_FILTER_PK_COLUMN, groupId);
-
-		Session session = null;
-
-		try {
-			session = openSession();
-
-			SQLQuery q = session.createSQLQuery(sql);
-
-			q.addScalar(COUNT_COLUMN_NAME,
-				com.liferay.portal.kernel.dao.orm.Type.LONG);
-
-			QueryPos qPos = QueryPos.getInstance(q);
-
-			qPos.add(groupId);
-
-			qPos.add(userId);
-
-			if (ppPaymentStatus != null) {
-				qPos.add(ppPaymentStatus);
-			}
-
-			Long count = (Long)q.uniqueResult();
-
-			return count.intValue();
-		}
-		catch (Exception e) {
-			throw processException(e);
-		}
-		finally {
-			closeSession(session);
-		}
-	}
-
-	/**
-	 * Returns the number of shopping orders.
+	 * Counts all the shopping orders.
 	 *
 	 * @return the number of shopping orders
 	 * @throws SystemException if a system exception occurred
 	 */
 	public int countAll() throws SystemException {
+		Object[] finderArgs = new Object[0];
+
 		Long count = (Long)FinderCacheUtil.getResult(FINDER_PATH_COUNT_ALL,
-				FINDER_ARGS_EMPTY, this);
+				finderArgs, this);
 
 		if (count == null) {
 			Session session = null;
@@ -2842,8 +2001,8 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 					count = Long.valueOf(0);
 				}
 
-				FinderCacheUtil.putResult(FINDER_PATH_COUNT_ALL,
-					FINDER_ARGS_EMPTY, count);
+				FinderCacheUtil.putResult(FINDER_PATH_COUNT_ALL, finderArgs,
+					count);
 
 				closeSession(session);
 			}
@@ -2923,37 +2082,8 @@ public class ShoppingOrderPersistenceImpl extends BasePersistenceImpl<ShoppingOr
 	private static final String _FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_1 = "shoppingOrder.ppPaymentStatus IS NULL";
 	private static final String _FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_2 = "shoppingOrder.ppPaymentStatus = ?";
 	private static final String _FINDER_COLUMN_G_U_PPPS_PPPAYMENTSTATUS_3 = "(shoppingOrder.ppPaymentStatus IS NULL OR shoppingOrder.ppPaymentStatus = ?)";
-	private static final String _FILTER_ENTITY_TABLE_FILTER_PK_COLUMN = "shoppingOrder.orderId";
-	private static final String _FILTER_SQL_SELECT_SHOPPINGORDER_WHERE = "SELECT DISTINCT {shoppingOrder.*} FROM Shopping_ShoppingOrder shoppingOrder WHERE ";
-	private static final String _FILTER_SQL_SELECT_SHOPPINGORDER_NO_INLINE_DISTINCT_WHERE_1 =
-		"SELECT {Shopping_ShoppingOrder.*} FROM (SELECT DISTINCT shoppingOrder.orderId FROM Shopping_ShoppingOrder shoppingOrder WHERE ";
-	private static final String _FILTER_SQL_SELECT_SHOPPINGORDER_NO_INLINE_DISTINCT_WHERE_2 =
-		") TEMP_TABLE INNER JOIN Shopping_ShoppingOrder ON TEMP_TABLE.orderId = Shopping_ShoppingOrder.orderId";
-	private static final String _FILTER_SQL_COUNT_SHOPPINGORDER_WHERE = "SELECT COUNT(DISTINCT shoppingOrder.orderId) AS COUNT_VALUE FROM Shopping_ShoppingOrder shoppingOrder WHERE ";
-	private static final String _FILTER_ENTITY_ALIAS = "shoppingOrder";
-	private static final String _FILTER_ENTITY_TABLE = "Shopping_ShoppingOrder";
 	private static final String _ORDER_BY_ENTITY_ALIAS = "shoppingOrder.";
-	private static final String _ORDER_BY_ENTITY_TABLE = "Shopping_ShoppingOrder.";
 	private static final String _NO_SUCH_ENTITY_WITH_PRIMARY_KEY = "No ShoppingOrder exists with the primary key ";
 	private static final String _NO_SUCH_ENTITY_WITH_KEY = "No ShoppingOrder exists with the key {";
-	private static final boolean _HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE = GetterUtil.getBoolean(PropsUtil.get(
-				PropsKeys.HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE));
 	private static Log _log = LogFactoryUtil.getLog(ShoppingOrderPersistenceImpl.class);
-	private static ShoppingOrder _nullShoppingOrder = new ShoppingOrderImpl() {
-			@Override
-			public Object clone() {
-				return this;
-			}
-
-			@Override
-			public CacheModel<ShoppingOrder> toCacheModel() {
-				return _nullShoppingOrderCacheModel;
-			}
-		};
-
-	private static CacheModel<ShoppingOrder> _nullShoppingOrderCacheModel = new CacheModel<ShoppingOrder>() {
-			public ShoppingOrder toEntityModel() {
-				return _nullShoppingOrder;
-			}
-		};
 }
